// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RealEstateForm should render 1`] = `
<form
  className="real-estate-form form form-aligned"
  onSubmit={[Function]}
>
  <fieldset>
    <legend>
      General details
    </legend>
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Name"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="5 Sunrise St"
    />
    <AddressField
      address={
        Object {
          "line1": "5 Sunrise St",
          "line2": "",
          "line3": "",
          "locality": "Ashgrove",
          "postcode": "4060",
          "state": "QLD",
        }
      }
      errors={
        Object {
          "line1": Array [],
          "line2": Array [],
          "line3": Array [],
        }
      }
      focus="name"
      name="address"
      onChange={[Function]}
      onFocus={[Function]}
    />
    <TextAreaField
      focus="name"
      label="Notes"
      name="notes"
      onChange={[Function]}
      onFocus={[Function]}
      value="Principal place of residence"
    />
  </fieldset>
  <fieldset>
    <legend>
      Purchase
    </legend>
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Purchase date"
      name="purchaseDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2014-09-10"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Purchase amount"
      min="1"
      name="purchaseAmount"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="520000"
    />
  </fieldset>
  <fieldset>
    <legend>
      Sale
    </legend>
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Sale date"
      name="saleDate"
      onChange={[Function]}
      onFocus={[Function]}
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Sale amount"
      min="1"
      name="saleAmount"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
    />
  </fieldset>
  <fieldset>
    <legend>
      Value
    </legend>
    <ValuationsInput
      errors={Array []}
      forceErrorDisplay={true}
      maxDate={null}
      minDate={"2014-09-10T14:00:00.000Z"}
      name="valuations"
      onChange={[Function]}
      onFocus={[Function]}
      valuations={
        Array [
          Object {
            "amount": 520000,
            "date": "2014-09-10",
            "note": "Purchase price",
            "type": "purchase",
          },
          Object {
            "amount": 705000,
            "date": "2016-04-15",
            "note": "Formal valuation",
            "type": "none",
          },
        ]
      }
    />
  </fieldset>
  <fieldset>
    <legend>
      Mortgage
    </legend>
    <button
      className="button button-primary"
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;

exports[`RealEstateForm should render 2`] = `
<form
  className="real-estate-form form form-aligned"
  onSubmit={[Function]}
>
  <fieldset>
    <legend>
      General details
    </legend>
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Name"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="38/8 Briggs Rd"
    />
    <AddressField
      address={
        Object {
          "line1": "Unit 38, Capertree Gardens",
          "line2": "8 Briggs Rd",
          "line3": "",
          "locality": "Springwood",
          "postcode": "4127",
          "state": "QLD",
        }
      }
      errors={
        Object {
          "line1": Array [],
          "line2": Array [],
          "line3": Array [],
        }
      }
      focus="name"
      name="address"
      onChange={[Function]}
      onFocus={[Function]}
    />
    <TextAreaField
      focus="name"
      label="Notes"
      name="notes"
      onChange={[Function]}
      onFocus={[Function]}
      value="Investment property"
    />
  </fieldset>
  <fieldset>
    <legend>
      Purchase
    </legend>
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Purchase date"
      name="purchaseDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2005-05-10"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Purchase amount"
      min="1"
      name="purchaseAmount"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="165000"
    />
  </fieldset>
  <fieldset>
    <legend>
      Sale
    </legend>
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Sale date"
      name="saleDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2017-01-01"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Sale amount"
      min="1"
      name="saleAmount"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="340000"
    />
  </fieldset>
  <fieldset>
    <legend>
      Value
    </legend>
    <ValuationsInput
      errors={Array []}
      forceErrorDisplay={true}
      maxDate={"2016-12-30T14:00:00.000Z"}
      minDate={"2005-05-10T14:00:00.000Z"}
      name="valuations"
      onChange={[Function]}
      onFocus={[Function]}
      valuations={
        Array [
          Object {
            "amount": 165000,
            "date": "2005-05-10",
            "note": "Purchase price",
            "type": "purchase",
          },
          Object {
            "amount": 260000,
            "date": "2015-09-10",
            "note": "Formal valuation",
            "type": "none",
          },
          Object {
            "amount": 340000,
            "date": "2017-01-01",
            "note": "Sale price",
            "type": "sale",
          },
        ]
      }
    />
  </fieldset>
  <fieldset>
    <legend>
      Mortgage
    </legend>
    <button
      className="button button-primary"
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;

exports[`purchase and sale should update valuations when purchase amount is changed 1`] = `
Object {
  "amount": 350000,
  "date": "2014-09-10",
}
`;

exports[`purchase and sale should update valuations when purchase date is changed 1`] = `
Object {
  "amount": 520000,
  "date": "2016-05-14",
}
`;

exports[`purchase and sale should update valuations when sale amount is changed 1`] = `
Object {
  "amount": 350000,
}
`;

exports[`purchase and sale should update valuations when sale date is changed 1`] = `
Object {
  "date": "2016-05-14",
}
`;

exports[`validation should require a purchase validation 1`] = `
Array [
  "There must be a purchase valuation",
]
`;

exports[`validation should require valuations to be between purchase and sale dates 1`] = `
Array [
  "Valuations must all be between the purchase and sale dates",
]
`;
